Ejemplo de ciclo de vida de una Actividad

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">android-lifecycle</string>
+    <string name="ciclo_vida">Ciclo de Vida Activity</string>
 </resources>
